stacks (old)/changedetection/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: changedetection
  namespace: changedetection
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`your.domain.com`)
    middlewares:
    - name: chain-authelia
      namespace: default
    services:
    - name: changedetection
      namespace: changedetection
      port: 5000
